Here is a detailed commit message with a subject line and bullet points:
`feat: Implement core application state and services`
- Introduce `AppState` struct with shared application configuration, storage, session manager, cache manager, and rate limiter
- Rename `handlers`, `services`, `models`, and `utils` to `code_snippet_designer` for namespace consistency
- Update `main.rs` to use new module imports and initialize core services (file storage, session manager, cache manager, and rate limiter)
- Implement configuration loading from environment variables using `AppConfig`
- Update file storage service to use temporary directory as specified in configuration
- Initialize session manager with 1-hour expiry and cache manager with 30-minute TTL
- Implement rate limiter with 100 requests per minute

---
Files changed:
M	.kiro/specs/code-snippet-designer/tasks.md
M	Cargo.toml
A	src/lib.rs
M	src/main.rs
M	src/services/download_service.rs
A	tests/README.md
A	tests/common/mod.rs
A	tests/frontend_backend_tests.rs
A	tests/integration_tests.rs
A	tests/performance_tests.rs

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,14 @@ name = "code-snippet-designer"
 version = "0.1.0"
 edition = "2021"
 
+[lib]
+name = "code_snippet_designer"
+path = "src/lib.rs"
+
+[[bin]]
+name = "code-snippet-designer"
+path = "src/main.rs"
+
 [features]
 default = []
 tesseract = ["dep:tesseract"]
@@ -11,7 +19,7 @@ tesseract = ["dep:tesseract"]
 # Web framework
 axum = "0.7"
 tokio = { version = "1.0", features = ["full"] }
-tower = "0.4"
+tower = { version = "0.4", features = ["util"] }
 tower-http = { version = "0.5", features = ["fs", "cors", "trace", "timeout"] }
 multer = "3.0"
 futures-util = "0.3"
