Here is a detailed commit message based on the changes:
`feat: Implement new architecture and features`
- Add Railway configuration file (`railway.json`) to define the build, deploy, and healthcheck processes.
- Update `ARCHITECTURE.md` to include an overview of the system architecture, highlighting the key components such as the Rust web server (Axum), OCR service (Tesseract), and Docker container.
- Create a new `DEPLOYMENT.md` file to document the deployment process, including start command, healthcheck path, and restart policy.
- Introduce a new `Dockerfile` to define the build process for the application.
- Update `docker-compose.yml` and `fly.toml` to reflect changes in the Docker environment and deployment process.
- Add a new `OCR_SETUP.md` file to document the setup and configuration of the OCR service (Tesseract).
- Create a new `QUICK_ANSWERS.md` file to provide quick answers to common questions about the application.
- Update `README.md` to reflect changes in the project structure, architecture, and features.
- Add a new `quick-start.sh` script to guide users through the setup process.
- Update `render.yaml` to reflect changes in rendering capabilities.
- Modify `src/handlers/generate.rs`, `src/handlers/upload.rs`, `src/lib.rs`, `src/main.rs`, `src/services/image_generator.rs`, and `src/services/ocr.rs` to incorporate new features and improvements.
- Update `static/index.html` to include new content and structure, including a responsive design and improved accessibility.
Note that this commit message is written in the present tense and follows the specified format. The bullet points list specific changes made to the codebase, including new files, modifications, and updates.

---
Files changed:
A	.dockerignore
M	.kiro/specs/code-snippet-designer/tasks.md
A	.railway.json
A	ARCHITECTURE.md
M	Cargo.toml
A	DEPLOYMENT.md
A	Dockerfile
A	OCR_SETUP.md
A	QUICK_ANSWERS.md
M	README.md
A	docker-compose.yml
A	fly.toml
A	quick-start.sh
A	render.yaml
M	src/handlers/gene

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,8 @@ resvg = "0.37"
 # tesseract = "0.13"
 tesseract = { version = "0.13", optional = true }
 
+# axum-extra removed; using `multer` directly for multipart handling
+
 # Syntax highlighting
 syntect = "5.1"
 
